Fixes number of layout issues

--- a/components/site-logo/assets/styles/site-logo.scss
+++ b/components/site-logo/assets/styles/site-logo.scss
@@ -10,7 +10,7 @@
   display: block;
   position: absolute;
 
-  top: 80px;
+  top: 90px;
   right: 10px;
   width: 30px;
   height: 30px;
